--- a/list_comprehensions(coordinates).ipynb
+++ b/list_comprehensions(coordinates).ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "89767bf9-1c9e-4fa9-87d6-0233fab14673",
+   "metadata": {},
+   "source": [
+    "### Let's learn about list comprehensions! You are given three integers x, y and z representing the dimensions of a cuboid along with an integer . Print a list of all possible coordinates given by (i, j, k) on a 3D grid where the sum of i+j+k is not equal to n. Here, 0<=i<=x; 0<=j<=y; 0<=k<=z. Please use list comprehensions rather than multiple loops, as a learning exercise.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f197d17d-1100-4acf-9722-3e5e8857c641",
@@ -25,9 +34,6 @@
     }
    ],
    "source": [
-    "# Let's learn about list comprehensions! You are given three integers x, y and z representing the dimensions of a cuboid along with an integer . Print a list of all possible coordinates given by (i, j, k) on a 3D grid where the sum of i+j+k is not equal to n. Here, 0<=i<=x; 0<=j<=y; 0<=k<=z. Please use list comprehensions rather than multiple loops, as a learning exercise.\n",
-    "\n",
-    "\n",
     "if __name__ == '__main__':\n",
     "    x = int(input())\n",
     "    y = int(input())\n",
