--- a/list_comprehensions(coordinates).ipynb
+++ b/list_comprehensions(coordinates).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f197d17d-1100-4acf-9722-3e5e8857c641",
    "metadata": {},
    "outputs": [
@@ -35,12 +35,18 @@
    ],
    "source": [
     "if __name__ == '__main__':\n",
+    "    # Read integer inputs for x, y, z, and n from the user\n",
     "    x = int(input())\n",
     "    y = int(input())\n",
     "    z = int(input())\n",
     "    n = int(input())\n",
     "  \n",
+    "# Generate a list of all possible coordinates [i, j, k] where\n",
+    "# 0 <= i <= x, 0 <= j <= y, 0 <= k <= z\n",
+    "# and the sum of i, j, and k is not equal to n\n",
     "coordinates = [([i, j, k]) for i in range(x+1) for j in range(y+1) for k in range(z+1) if i+j+k != n]\n",
+    "\n",
+    "# Print the list of coordinates\n",
     "print(coordinates)"
    ]
   },
