--- a/string_validators.ipynb
+++ b/string_validators.ipynb
@@ -1,12 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "48449fb2-b7dd-40ab-82db-246bdf96b4df",
+   "metadata": {},
+   "source": [
+    "# Task\n",
+    "### You are given a string s.\n",
+    "### Your task is to find out if the string s contains: alphanumeric characters, alphabetical characters, digits, lowercase and uppercase characters.\n",
+    "### Input Format:\n",
+    "### A single line containing a string s."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3e663738-f4d1-404c-904c-dda7ccda580c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " q4A\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    # Get input from the user\n",
+    "    s = input()\n",
+    "\n",
+    "    # Check if the input contains alphanumeric characters\n",
+    "    alphanumeric = any(char.isalnum() for char in s)\n",
+    "\n",
+    "    # Check if the input contains alphabetical characters\n",
+    "    alphabetical = any(char.isalpha() for char in s)\n",
+    "\n",
+    "    # Check if the input contains digits\n",
+    "    digits = any(char.isdigit() for char in s)\n",
+    "\n",
+    "    # Check if the input contains lowercase letters\n",
+    "    lowercase = any(char.islower() for char in s)\n",
+    "\n",
+    "    # Check if the input contains uppercase letters\n",
+    "    uppercase = any(char.isupper() for char in s)\n",
+    "    \n",
+    "    # Print the results\n",
+    "    print(alphanumeric)  # True if alphanumeric characters are present, False otherwise\n",
+    "    print(alphabetical)  # True if alphabetical characters are present, False otherwise\n",
+    "    print(digits)  # True if digits are present, False otherwise\n",
+    "    print(lowercase)  # True if lowercase letters are present, False otherwise\n",
+    "    print(uppercase)  # True if uppercase letters are present, False otherwise"
+   ]
   }
  ],
  "metadata": {
