--- a/Text_alignment.ipynb
+++ b/Text_alignment.ipynb
@@ -1,12 +1,85 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c45bb233-2e9f-4d6b-a67c-62c5aeef0024",
+   "metadata": {},
+   "source": [
+    "# Task\n",
+    "### You are given a partial code that is used for generating the HackerRank Logo of variable thickness.\n",
+    "### Your task is to replace the blank (______) with rjust, ljust or center.\n",
+    "### Replace all ______ with rjust, ljust or center. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb58b8d3-c465-450c-9490-30b8d84ab236",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    H    \n",
+      "   HHH   \n",
+      "  HHHHH  \n",
+      " HHHHHHH \n",
+      "HHHHHHHHH\n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHHHHHHHHHHHHHHHHHHHHHH   \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "  HHHHH               HHHHH             \n",
+      "                    HHHHHHHHH \n",
+      "                     HHHHHHH  \n",
+      "                      HHHHH   \n",
+      "                       HHH    \n",
+      "                        H     \n"
+     ]
+    }
+   ],
+   "source": [
+    "thickness = int(input()) # This must be an odd number\n",
+    "c = 'H'\n",
+    "\n",
+    "# Top Cone\n",
+    "for i in range(thickness):\n",
+    "    print((c*i).rjust(thickness-1)+c+(c*i).ljust(thickness-1))\n",
+    "\n",
+    "# Top Pillars\n",
+    "for i in range(thickness+1):\n",
+    "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))\n",
+    "\n",
+    "# Middle Belt\n",
+    "for i in range((thickness+1)//2):\n",
+    "    print((c*thickness*5).center(thickness*6))    \n",
+    "\n",
+    "# Bottom Pillars\n",
+    "for i in range(thickness+1):\n",
+    "    print((c*thickness).center(thickness*2)+(c*thickness).center(thickness*6))    \n",
+    "\n",
+    "# Bottom Cone\n",
+    "for i in range(thickness):\n",
+    "    print(((c*(thickness-i-1)).rjust(thickness)+c+(c*(thickness-i-1)).ljust(thickness)).rjust(thickness*6))"
+   ]
   }
  ],
  "metadata": {
