--- a/text_wrap.ipynb
+++ b/text_wrap.ipynb
@@ -1,12 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c3bd0808-2ee2-4915-819b-36e12e896315",
+   "metadata": {},
+   "source": [
+    "#### You are given a string s and width w.\n",
+    "#### Your task is to wrap the string into a paragraph of width w.\n",
+    "#### Function Description\n",
+    "#### Complete the wrap function in the editor below.\n",
+    "#### wrap has the following parameters:\n",
+    "#### string string: a long string\n",
+    "#### int max_width: the width to wrap to\n",
+    "#### Returns\n",
+    "#### string: a single string with newline characters ('\\n') where the breaks should be\n",
+    "#### Input Format\n",
+    "#### The first line contains a string, string.\n",
+    "#### The second line contains the width, max_width."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7875cbb1-0620-4a39-a166-4c29f7455b77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import textwrap\n",
+    "\n",
+    "def wrap(string, max_width):\n",
+    "    return textwrap.fill(string, max_width)\n",
+    "    #return textwrap.wrap(string, max_width)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    string, max_width = input(), int(input())\n",
+    "    result = wrap(string, max_width)\n",
+    "    print(result)"
+   ]
   }
  ],
  "metadata": {
