--- a/text_wrap.ipynb
+++ b/text_wrap.ipynb
@@ -21,21 +21,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7875cbb1-0620-4a39-a166-4c29f7455b77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ASDFGHJKLPOIUYTREWWQZXCVBNM\n",
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASDF\n",
+      "GHJK\n",
+      "LPOI\n",
+      "UYTR\n",
+      "EWWQ\n",
+      "ZXCV\n",
+      "BNM\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "import textwrap\n",
     "\n",
     "def wrap(string, max_width):\n",
+    "    # Using textwrap.fill to wrap the input string to the specified max_width\n",
     "    return textwrap.fill(string, max_width)\n",
-    "    #return textwrap.wrap(string, max_width)\n",
+    "    # Alternative approach: using textwrap.wrap to get a list of wrapped lines\n",
+    "    # return textwrap.wrap(string, max_width)\n",
     "\n",
     "if __name__ == '__main__':\n",
+    "    # Taking user input for the string to wrap and the maximum width\n",
     "    string, max_width = input(), int(input())\n",
+    "    # Wrapping the string using the wrap function\n",
     "    result = wrap(string, max_width)\n",
+    "    # Printing the wrapped string\n",
     "    print(result)"
    ]
   }
