--- a/alphabet_rangoli.ipynb
+++ b/alphabet_rangoli.ipynb
@@ -1,91 +1,137 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d40988cc-5ec0-467c-ad75-455527817bd9",
+   "metadata": {},
+   "source": [
+    "#### You are given an integer, N. Your task is to print an alphabet rangoli of size N. (Rangoli is a form of Indian folk art based on creation of patterns.)\n",
+    "#### Different sizes of alphabet rangoli are shown below:\n",
+    "\n",
+    "#### #size 3\n",
+    "\n",
+    "##### ----c----\n",
+    "##### --c-b-c--\n",
+    "##### c-b-a-b-c\n",
+    "##### --c-b-c--\n",
+    "##### ----c----\n",
+    "\n",
+    "#### #size 5\n",
+    "\n",
+    "##### --------e--------\n",
+    "##### ------e-d-e------\n",
+    "##### ----e-d-c-d-e----\n",
+    "##### --e-d-c-b-c-d-e--\n",
+    "##### e-d-c-b-a-b-c-d-e\n",
+    "##### --e-d-c-b-c-d-e--\n",
+    "##### ----e-d-c-d-e----\n",
+    "##### ------e-d-e------\n",
+    "##### --------e--------\n",
+    "\n",
+    "#### #size 10\n",
+    "\n",
+    "##### ------------------j------------------\n",
+    "##### ----------------j-i-j----------------\n",
+    "##### --------------j-i-h-i-j--------------\n",
+    "##### ------------j-i-h-g-h-i-j------------\n",
+    "##### ----------j-i-h-g-f-g-h-i-j----------\n",
+    "##### --------j-i-h-g-f-e-f-g-h-i-j--------\n",
+    "##### ------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
+    "##### ----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
+    "##### --j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
+    "##### j-i-h-g-f-e-d-c-b-a-b-c-d-e-f-g-h-i-j\n",
+    "##### --j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
+    "##### ----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
+    "##### ------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
+    "##### --------j-i-h-g-f-e-f-g-h-i-j--------\n",
+    "##### ----------j-i-h-g-f-g-h-i-j----------\n",
+    "##### ------------j-i-h-g-h-i-j------------\n",
+    "##### --------------j-i-h-i-j--------------\n",
+    "##### ----------------j-i-j----------------\n",
+    "##### ------------------j------------------\n",
+    "\n",
+    "\n",
+    "#### The center of the rangoli has the first alphabet letter a, and the boundary has the Nth alphabet letter (in alphabetical order).\n",
+    "#### Function Description\n",
+    "#### Complete the rangoli function in the editor below.\n",
+    "#### rangoli has the following parameters:\n",
+    "#### int size: the size of the rangoli\n",
+    "#### Returns\n",
+    "#### string: a single string made up of each of the lines of the rangoli separated by a newline character (\\n)\n",
+    "#### Input Format\n",
+    "#### Only one line of input containing size, the size of the rangoli."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7306425b-f580-47af-98d7-eabcb9ac9b92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------g------------\n",
+      "----------g-f-g----------\n",
+      "--------g-f-e-f-g--------\n",
+      "------g-f-e-d-e-f-g------\n",
+      "----g-f-e-d-c-d-e-f-g----\n",
+      "--g-f-e-d-c-b-c-d-e-f-g--\n",
+      "g-f-e-d-c-b-a-b-c-d-e-f-g\n",
+      "--g-f-e-d-c-b-c-d-e-f-g--\n",
+      "----g-f-e-d-c-d-e-f-g----\n",
+      "------g-f-e-d-e-f-g------\n",
+      "--------g-f-e-f-g--------\n",
+      "----------g-f-g----------\n",
+      "------------g------------\n"
+     ]
+    }
+   ],
    "source": [
-    "# You are given an integer, N. Your task is to print an alphabet rangoli of size N. (Rangoli is a form of Indian folk art based on creation of patterns.)\n",
-    "# Different sizes of alphabet rangoli are shown below:\n",
-    "\n",
-    "# #size 3\n",
-    "\n",
-    "# ----c----\n",
-    "# --c-b-c--\n",
-    "# c-b-a-b-c\n",
-    "# --c-b-c--\n",
-    "# ----c----\n",
-    "\n",
-    "# #size 5\n",
-    "\n",
-    "# --------e--------\n",
-    "# ------e-d-e------\n",
-    "# ----e-d-c-d-e----\n",
-    "# --e-d-c-b-c-d-e--\n",
-    "# e-d-c-b-a-b-c-d-e\n",
-    "# --e-d-c-b-c-d-e--\n",
-    "# ----e-d-c-d-e----\n",
-    "# ------e-d-e------\n",
-    "# --------e--------\n",
-    "\n",
-    "# #size 10\n",
-    "\n",
-    "# ------------------j------------------\n",
-    "# ----------------j-i-j----------------\n",
-    "# --------------j-i-h-i-j--------------\n",
-    "# ------------j-i-h-g-h-i-j------------\n",
-    "# ----------j-i-h-g-f-g-h-i-j----------\n",
-    "# --------j-i-h-g-f-e-f-g-h-i-j--------\n",
-    "# ------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
-    "# ----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
-    "# --j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
-    "# j-i-h-g-f-e-d-c-b-a-b-c-d-e-f-g-h-i-j\n",
-    "# --j-i-h-g-f-e-d-c-b-c-d-e-f-g-h-i-j--\n",
-    "# ----j-i-h-g-f-e-d-c-d-e-f-g-h-i-j----\n",
-    "# ------j-i-h-g-f-e-d-e-f-g-h-i-j------\n",
-    "# --------j-i-h-g-f-e-f-g-h-i-j--------\n",
-    "# ----------j-i-h-g-f-g-h-i-j----------\n",
-    "# ------------j-i-h-g-h-i-j------------\n",
-    "# --------------j-i-h-i-j--------------\n",
-    "# ----------------j-i-j----------------\n",
-    "# ------------------j------------------\n",
-    "\n",
-    "\n",
-    "# The center of the rangoli has the first alphabet letter a, and the boundary has the Nth alphabet letter (in alphabetical order).\n",
-    "# Function Description\n",
-    "# Complete the rangoli function in the editor below.\n",
-    "# rangoli has the following parameters:\n",
-    "# int size: the size of the rangoli\n",
-    "# Returns\n",
-    "# string: a single string made up of each of the lines of the rangoli separated by a newline character (\\n)\n",
-    "# Input Format\n",
-    "# Only one line of input containing size, the size of the rangoli.\n",
-    "\n",
     "def print_rangoli(s):\n",
-    "    # your code goes here\n",
-    "    ab='abcdefghijklmnopqrstuvwxyz'\n",
-    "    mid=((n+(n-1))*2)-1\n",
-    "    rev=[]\n",
+    "    # Define a string of lowercase alphabet letters\n",
+    "    ab = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    \n",
+    "    # Calculate the width of the midline of the rangoli pattern\n",
+    "    mid = ((s + (s - 1)) * 2) - 1\n",
+    "    \n",
+    "    # Initialize a list to store the lines of the rangoli\n",
+    "    rev = []\n",
+    "    \n",
+    "    # Loop to create the top half of the rangoli\n",
     "    for i in range(s):\n",
-    "        r=''\n",
-    "        k=''\n",
-    "        for j in range(i+1):\n",
-    "            if j==i:\n",
-    "                r+=ab[s-1-j]\n",
-    "                top=r+k[::-1]\n",
-    "                t=top.center(mid,\"-\")\n",
-    "                rev.append(t)\n",
-    "                print(t)\n",
+    "        r = ''  # Initialize an empty string for the left part of the line\n",
+    "        k = ''  # Initialize an empty string for the right part of the line\n",
+    "        \n",
+    "        # Inner loop to construct each line\n",
+    "        for j in range(i + 1):\n",
+    "            if j == i:\n",
+    "                # If it's the last character in the current line\n",
+    "                r += ab[s - 1 - j]  # Add the character from the alphabet\n",
+    "                top = r + k[::-1]  # Combine left part and reversed right part\n",
+    "                t = top.center(mid, \"-\")  # Center the line with dashes\n",
+    "                rev.append(t)  # Add the line to the list\n",
+    "                print(t)  # Print the current line\n",
     "            else:\n",
-    "                r+=ab[s-1-j]+\"-\"\n",
-    "                k=r\n",
-    "    for i in range(s-1):\n",
-    "        print(rev[s-2-i])\n",
+    "                # For other characters in the line\n",
+    "                r += ab[s - 1 - j] + \"-\"  # Add character with a dash\n",
+    "                k = r  # Update the right part of the line\n",
+    "    \n",
+    "    # Loop to create the bottom half of the rangoli by reversing the top half\n",
+    "    for i in range(s - 1):\n",
+    "        print(rev[s - 2 - i])  # Print the reversed lines from the top half\n",
+    "\n",
     "if __name__ == '__main__':\n",
-    "    n = int(input())\n",
-    "    print_rangoli(n)"
+    "    n = int(input())  # Read an integer input\n",
+    "    print_rangoli(n)  # Call the function with the input value"
    ]
   }
  ],
